Service/service-for-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    ingress: 'true'
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
