Service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dantri.com.vn
    http:
      paths:
      - path: /abc
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 9999
